# relian

./: .cursorrules  .eslintrc.json  .gitignore  .gitmodules  ARCHITECTURE.md  Anchor.toml  Cargo.toml  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
examples/: migrate.py
examples/cobol/: banking-system.cbl
programs/relian/: Cargo.toml
programs/relian/src/: lib.rs
scripts/setup/: dev-setup.sh  download-models.py  init-db.py  setup.sh
src/analysis/: __init__.py  semantic.py  test_generator.py
src/api/: main.py
src/blockchain/: __init__.py  client.py
src/core/: __init__.py  orchestrator.py
src/generators/: __init__.py  tests.py
src/intelligence/: __init__.py  migration_intelligence.py
src/ml/: __init__.py  risk_scorer.py
src/parsers/: __init__.py  base.py  cobol.py
src/parsers/antlr/cobol/: Cobol85.interp  Cobol85.tokens  Cobol85Lexer.interp  Cobol85Lexer.py  Cobol85Lexer.tokens  Cobol85Listener.py  Cobol85Parser.py  Cobol85Visitor.py
src/parsers/grammars/: Cobol85.g4
src/plugins/: __init__.py  base.py  registry.py
src/plugins/ast_codemods/: __init__.py  jscodeshift_adapter.py  jscodeshift_identity.js  rope_adapter.py
src/plugins/deterministic/: __init__.py  openrewrite_adapter.py  piranha_adapter.py
src/storage/: neo4j_client.py
src/ui/: index.html  index.tsx
tests/: test_blockchain.py  test_core.py  test_ml.py  test_plugins.py  verify_analysis.py  verify_generators.py  verify_parsers.py
tests/analysis/: test_generator.py  test_semantic.py
tests/parsers/: test_cobol.py
