[package]
name = "relian"
version = "0.1.0"
description = "RELIAN — Solana/Anchor program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "relian"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
